[workspace]
members = [
    "rs/minter"
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.73"
candid = { version = "0.9.7", features = ["parser"] }
ciborium = "0.2.0"
ethabi = "18.0.0"
ethnum = "1.4.0"
getrandom = "0.2.10"
hex = "0.4.3"
ic-canister-log = "0.2.0"
ic-cdk = "0.11.0"
ic-cdk-macros = "0.8.0"
ic-cdk-timers = "0.5.0"
ic-ledger-types = "0.7.0"
ic-stable-structures = "0.5.6"
icrc-ledger-types = { git = "https://github.com/benjizhai/icrc-ledger-types.git" }
k256 = { version = "0.13.1", default_features = false, features = ["ecdsa"] }
lazy_static = "1.4.0" 
num-traits = "0.2.15"
rustic = "0.1.6"
rustic-macros = "0.1.5"
serde = "1.0.164"
serde_bytes = "0.11.9"
serde_json = "1.0.105"
sha2 = "0.10.7"
sha3 = "0.10.8"

